# MassaCorp

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  Dockerfile  README.md  SECURITY.md  alembic.ini  docker-compose.wireguard.yml  docker-compose.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: secret-rotation.yml  security.yml
alembic/: README.md  env.py
alembic/versions/: 9ed31d547bd7_cleanup_legacy_tables.py  c3bee0e2b93b_initial_schema.py  d4cf1a3e5f7c_add_tenants_users.py  e5a72b8c9d0f_add_sessions_updated_at.py  f6b83c9d0e1a_add_rls_and_password_reset.py  g7d94c0f2b3e_add_api_keys.py  h8e05d1g3c4f_add_missing_indexes.py  i9f16e2h4d5g_add_audit_log_immutable.py  j0g27e3i5e6h_add_session_absolute_expiry.py  k1h38f4j6f7i_add_api_key_scopes_usage.py  l2i49g5k7g8j_add_user_mfa_required.py  m3j50h6l8h9k_add_oauth_accounts.py  n4k61h7m9i0l_enable_rls_all_tables.py  o5l72i8n0j1m_consolidation_fix_schema.py  p6m83j9o1k2n_add_finance_domain.py  q7n94k0p2l3o_add_restaurant_domain.py  r8o05l1q3m4p_fix_user_roles_schema.py  s9p16m2r4n5q_add_epicerie_supply_orders.py  t0a17n3s5o7q_fix_restaurant_consumptions_schema.py  u1b28o4t6p8r_add_etl_staging_normalization.py  v2c39p5u7q9s_add_taiyat_tables.py  v3a45b67c89d_add_ean_to_taiyat.py  w4d50q6v8r0t_add_eurociel_tables.py  x5e61r7w9s1u_add_eurociel_catalogue.py  y6f72s8x0t2v_add_epicerie_link_fournisseur.py  z7g83t9y1u3w_add_other_supplier_products.py
app/: README.md  __init__.py  main.py
app/api/: README.md  health.py
app/core/: __init__.py  config.py  crypto.py  database.py  dependencies.py  exceptions.py  logging.py  metrics.py  password_policy.py  query_profiler.py  redis.py  secrets.py  security.py  shutdown.py
app/middleware/: __init__.py  (+7 more)
db/: README.md
docker/: README.md  entrypoint.sh
docs/: ARCHITECTURE.md  ARCHITECTURE_REFONTE_EPICERIE_RESTAURANT.md  AUDIT_COMPLET_2026.md  AUDIT_REPORT.md  AUDIT_SECURITE.md  Backend Security Architecture.md  INCIDENT_RESPONSE.md  MIGRATION_ROADMAP.md  SECURITY.md  SID_ARCHITECTURE_ETL.md  WORKFLOW_NORMALISATION_COLONNES.md  etl_benchmark_metro_per_file.csv  modele_dimensionnel.mermaid  modele_dimensionnel_noutam.md  monprojet_migration_matrices.md
etl/: normalization.py
fournisseurs/: fournisseurs.json
frontend/: .dockerignore  .env.example  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vitest.config.ts
scripts/: README.md  auto_rapprochement.py  auto_rapprochement_v2.py  backup.sh  check_imports.py  db_init.sh  migrate_epicerie_from_monprojet.py  migrate_restaurant_from_monprojet.py  rotate_secrets.py  seed_restaurant_from_epicerie.py
tests/: README.md  __init__.py  conftest.py
wireguard/: README.md  client_internet.conf  client_mobile.conf  client_ruuuzer.conf  wg0.conf.template
(+406 files in other folders)
